# simulator-arch-sample

./: .editorconfig  .gitignore  main.py  pyproject.toml
src/: dto.py  fj_platform.py  planner.py  simulator.py
src/interfaces/: __init__.py  abstract_interface.py  concrete_interfaces.py  interface_factory.py  interfaces_in_real.py  interfaces_in_simulator.py
